@@ -35,4 +35,7 @@ handle_listpartitions(Client &client, Request request, Response &response);
 CommandResult
 handle_newpartition(Client &client, Request request, Response &response);
 
+CommandResult
+handle_moveoutput(Client &client, Request request, Response &response);
+
 #endif
